# note-taking-app

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .flake8  .pre-commit-config.yaml  Dockerfile  conftest.py  pyproject.toml  pytest.ini
backend/apps/authentication/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/authentication/migrations/: 0001_initial.py  0002_remove_user_avatar_remove_user_is_email_verified_and_more.py
backend/apps/core/: models.py  views.py
backend/apps/notes/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/notes/management/commands/: seed_categories.py
backend/apps/notes/migrations/: 0001_initial.py
backend/config/: urls.py  wsgi.py
backend/config/settings/: __init__.py  base.py  development.py  production.py  testing.py
backend/tests/: test_authentication.py  test_core.py  test_notes.py
frontend/: .gitignore  Dockerfile  biome.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/e2e/: auth.setup.ts  auth.spec.ts  notes.spec.ts
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(notes)/: error.tsx  layout.tsx  loading.tsx  page.tsx
frontend/src/app/(notes)/@modal/: default.tsx
frontend/src/app/(notes)/@modal/(.)/[category]/[noteId]/: page.tsx
frontend/src/app/(notes)/[category]/: not-found.tsx  page.tsx
frontend/src/app/(notes)/[category]/[noteId]/: page.tsx
frontend/src/app/api/[...path]/: route.ts
frontend/src/app/auth/login/: page.tsx
frontend/src/app/auth/signup/: page.tsx
frontend/src/components/: CategoryBadge.tsx  CategorySelect.tsx  EmptyState.tsx  Header.tsx  LoginForm.tsx  NoteCard.tsx  NoteDialog.tsx  NoteModal.tsx  NotesClient.tsx  ServerError.tsx  Sidebar.tsx  SignUpForm.tsx  index.ts
frontend/src/components/ui/: dialog.tsx  password-input.tsx  select.tsx
frontend/src/lib/: api-fetch.ts  auth.ts  network-error.ts
frontend/src/lib/__tests__/: network-error.test.ts
frontend/src/lib/api/: notes.ts
frontend/src/lib/utils/: format-zod-errors.ts  set-form-errors.ts
frontend/src/lib/utils/__tests__/: format-zod-errors.test.ts  set-form-errors.test.ts  utils.test.ts
frontend/src/schemas/: auth.ts  notes.ts
frontend/src/server/actions/: auth.ts  middleware.ts  notes.ts
frontend/src/store/: useStore.ts
frontend/src/types/: notes.ts
scripts/: setup-dev.sh
